<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration07">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@mipmap/small_left" />

            <ImageView
                android:id="@+id/image_holder"
                android:layout_width="185dp"
                android:layout_height="172dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="9dp"
                android:src="@drawable/ic_group_7__2_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />


            <TextView
                android:id="@+id/setpintxt"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36.7dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nexa_xbold"
                android:textStyle="bold"
                android:textSize="14.7sp"
                android:textColor="#0b0320"
                android:text="Set your PIN"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_holder" />

            <TextView
                android:id="@+id/txtdesc"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="10dp"
                android:fontFamily="@font/nexa_book"
                android:textStyle="normal"
                android:textSize="12sp"
                android:textColor="#8c8a9a"
                android:lineSpacingExtra="5.3sp"
                android:text="You will use this to login next time"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setpintxt" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="327dp"
                android:layout_height="220dp"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_marginTop="8.7dp"
                app:cardElevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="19dp"
                app:layout_constraintTop_toBottomOf="@+id/txtdesc">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pin1"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="19.5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="4 digit Pin"
                        android:paddingHorizontal="5dp"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/nexa_book"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:textColor="#8c8a9a"
                            android:textSize="12sp"
                            android:textStyle="normal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pin2"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="294dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pin1"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="@font/nexa_book"
                        android:hint="Repeat Pin"
                        android:paddingHorizontal="5dp"
                        android:textColor="#8c8a9a"
                        android:textSize="10.7sp"
                        android:textStyle="normal"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="numberPassword"
                            android:textColor="#8c8a9a"
                            android:fontFamily="@font/nexa_book"
                            android:textSize="12sp"
                            android:maxLength="4" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/btn_getstarted"
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:layout_below="@+id/pin2"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="19dp"
                        android:fontFamily="@font/nexa_bold"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="#ffffff"
                        android:backgroundTint="@color/colorPurple"
                        android:onClick="sendPin"
                        android:text="Continue"
                        android:textAllCaps="false" />

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressr07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/progress"
        app:layout_anchor="@+id/nestedScrollView3"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>