<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorWhite"
    tools:context=".LogIn">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@mipmap/small_left" />

            <LinearLayout
                android:id="@+id/LoginNetAlert"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorConcRed"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_anchorGravity="top|center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="No Internet Connection"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/closeNetAlert"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="180dp"
                    android:src="@drawable/ic_close_white" />
            </LinearLayout>

            <ImageView
                android:id="@+id/include3"
                android:layout_width="185dp"
                android:layout_height="172dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/group_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginTop="75dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Log in to your account"
                    android:fontFamily="@font/nexa_bold"
                    android:textAlignment="center"
                    android:textColor="@color/colorMidnight"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginVertical="16dp"
                        android:elevation="1dp"
                        android:outlineAmbientShadowColor="@color/colorBlack"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="12dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/phoneNoLogIN"
                                style="@style/LoginTextInputLayoutStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="12dp"
                                android:layout_marginVertical="10dp"
                                android:hint="@string/kenya_number"
                                app:counterEnabled="true"
                                app:counterMaxLength="9">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:letterSpacing="0.08"
                                    android:fontFamily="@font/nexa_bold"
                                    android:drawableStart="@drawable/ic_kenya_flag"
                                    android:inputType="number" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/pinLogIN"
                                style="@style/LoginTextInputLayoutStyle"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="12dp"
                                android:hint="Enter Pin"
                                app:endIconMode="password_toggle">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="numberPassword"
                                    android:fontFamily="@font/nexa_book"
                                    android:maxLength="4" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="12dp"
                                android:fontFamily="@font/nexa_book"
                                android:onClick="FogtPssd"
                                android:text="Forgot Password?"
                                android:textAlignment="textStart"
                                android:textAllCaps="false"
                                android:textColor="@color/warm_purple"
                                android:textSize="12sp"
                                android:textStyle="normal" />

                            <Button
                                android:id="@+id/btn_LogIn"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginHorizontal="12dp"
                                android:layout_marginVertical="10dp"
                                android:backgroundTint="#932777"
                                android:fontFamily="@font/nexa_bold"
                                android:text="Log in"
                                android:textAllCaps="false"
                                android:textColor="@color/colorWhite"
                                android:textSize="12sp" />
                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressr07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/progress"
                app:layout_anchorGravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>